--- a/1.html
+++ b/1.html
@@ -1,1 +1,19 @@
-嬲
+<html>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179024864-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-179024864-1');
+</script>
+
+</head>
+<body>
+
+<a href="www.baidu.com">test</a>
+
+</body>
+</html>
