--- a/1.html
+++ b/1.html
@@ -1,5 +1,6 @@
 <html>
- <script>
+<head>
+<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -9,10 +10,10 @@ var _hmt = _hmt || [];
 })();
 </script>
 
-
+</head>
 <body>
 
-<a href="www.baidu.com">test</a>
+<a href="www.baidu.com">test1</a>
 
 </body>
 </html>
