--- a/1.html
+++ b/1.html
@@ -1,19 +1,21 @@
+<!DOCTYPE HTML>
 <html>
 <head>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?2d69f9d505f24f5d9809c80a97fe5601";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?2d69f9d505f24f5d9809c80a97fe5601";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
 })();
 </script>
 
 </head>
+
 <body>
 
-<a href="www.baidu.com">test1</a>
+<p>test</p>
 
 </body>
 </html>
