--- a/index.html
+++ b/index.html
@@ -15,8 +15,30 @@
 </head>
 
 <body>
+  
+  
+xhy nmsl
 
-<p>wszsd</p>
+
+
+全局Start
+
+
+
+
+
+版本Start@1.8·版本End
+
+
+
+公告Start@反馈邮箱：xxx@xxx.com|公告：|一天体验卡密：ljgmcnm|暂未投入使用！|敬请期待！|·公告End
+
+
+
+
+全局End
+
+
 
 </body>
 </html>
