--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ xhy nmsl
 
 版本Start@1.9·版本End
 
-公告Start@反馈邮箱：xxx@xxx.com|公告：|一天体验卡密：ljgmcnm|暂未投入使用！|敬请期待！|·公告End
+公告Start@|公告：|暂未投入使用！|敬请期待！|·公告End
 
 全局End
  
